Fixed masthead on tablets

--- a/public/css/jameshoward.css
+++ b/public/css/jameshoward.css
@@ -31,6 +31,17 @@
   background-color: #f0f0f0;
 }
 
+@media (min-width: 38em) {
+  h3.masthead-title {
+    margin-right: auto;
+    margin-left: 3rem;
+  }
+  .page {
+    margin-left: 3rem;
+    margin-right: 1rem;
+  }
+}
+
 /* Quotes */
 blockquote cite {
   display: block;
